Enterprise Connect Page Development (#23)
* Adding Package.json and linter

* Updated Package.json

* Updated Package-lock.json

* Delete .eslintrc.json

* Create .jshintrc

* added jshintign file

* Updated styling path

* adding spec for unit test

* updated loadwebui path

* changed loadwebui path

* updated path for css

* Enabled Dashboard view from sidebar

* Capitalization changes

* Dynamic Header changes

* Service Containers

* Removed style tags

* Updated Default Header text

* Formatted Code

* Formatted code

* Formatted code

* Delete MenuList.js

* Delete SidebarMenu.js

* Formatted code

* Formatted code

* Formatted code

* Formatted code

* Updated modules

* Resolving glob-parent module issue

* Thread Connect onclick call

* Thread Connect Page

* Thread Connect Changes

* Thread Connect page's css changes

* adding graph

* Updated highchart libs

* Updating for CORS

* Creating Static folder

* Highchart static files

* Fetching Highchart static files

* updating ui path

* Updated loadwebui path

* Graph color

* Graph color changes

* Enterprise Connect page call

* Enterprise page

* Enterprise page onclick

--- a/webui-assets/styling/style.css
+++ b/webui-assets/styling/style.css
@@ -85,6 +85,16 @@ h6 {
   color: white;
 }
 
+.green-color {
+  color: #158a99;
+  border-color: #158a99;
+}
+
+.service-text {
+  color: rgb(31, 120, 180);
+  text-decoration: none;
+}
+
 .social-tag {
   font-size: 0.9vw;
   color: darkgrey;
