Change portal colors according to GE colors (#31)
* Adding Package.json and linter

* Updated Package.json

* Updated Package-lock.json

* Delete .eslintrc.json

* Create .jshintrc

* added jshintign file

* Updated styling path

* adding spec for unit test

* updated loadwebui path

* changed loadwebui path

* updated path for css

* Enabled Dashboard view from sidebar

* Capitalization changes

* Dynamic Header changes

* Service Containers

* Removed style tags

* Updated Default Header text

* Formatted Code

* Formatted code

* Formatted code

* Delete MenuList.js

* Delete SidebarMenu.js

* Formatted code

* Formatted code

* Formatted code

* Formatted code

* Updated modules

* Resolving glob-parent module issue

* Thread Connect onclick call

* Thread Connect Page

* Thread Connect Changes

* Thread Connect page's css changes

* adding graph

* Updated highchart libs

* Updating for CORS

* Creating Static folder

* Highchart static files

* Fetching Highchart static files

* updating ui path

* Updated loadwebui path

* Graph color

* Graph color changes

* Enterprise Connect page call

* Enterprise page

* Enterprise page onclick

* Service Logos

* Adding logos

* Dive Page Call

* Dive Page

* Formatted

* Proper formatted

* Proper formatted

* Minor correction

* DivePower PMX call

* DivePower Page

* DivePower PMX Call from Dive

* Update style.css

* Update Sidebar.js

* Update Dashboard.js

* Update Dive.js

* Update DivePower.js

* Update EnterpriseConnect.js

* Update ThreadConnect.js

* GE New logo

* Logo Column

--- a/webui-assets/styling/style.css
+++ b/webui-assets/styling/style.css
@@ -3,9 +3,24 @@
   src: url(../font/GEInspiraSans-Regular-v02.ttf);
 }
 
+::placeholder {
+  color: #002E5D;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+ color: #002E5D;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+ color: #002E5D;
+}
+
+
 body {
   overflow-x: hidden;
   font-family: GE Inspira Sans !important;
+  color: #005EB8 !important;
 }
 
 h5 {
@@ -23,7 +38,7 @@ h6 {
 #sidebar-wrapper {
   width: 28%;
   min-height: 100vh;
-  background-color: #1f78b4 !important;
+  background-color: #0C2340 !important;
   -webkit-transition: margin 0.25s ease-out;
   -moz-transition: margin 0.25s ease-out;
   -o-transition: margin 0.25s ease-out;
@@ -47,7 +62,7 @@ h6 {
   height: 7.5rem;
   /* padding: 2rem 1rem 1rem 1rem !important; */
   color: white;
-  background-color: #158a99;
+  background-color: #005EB8;
   /* margin-bottom: 1.5rem; */
 }
 
@@ -60,8 +75,6 @@ h6 {
 .dashboard-header {
   font-size: 2vw;
   font-weight: bold;
-  color: #1f78b4;
-  /* margin: 1rem 0 0 1rem; */
 }
 
 .global-icon img {
@@ -70,13 +83,13 @@ h6 {
 
 .global-icon {
   font-size: 0.7vw;
-  color: grey;
+  color: #333F48;
   font-weight: lighter;
 }
 
 .list-group-flush .list-group-item {
   border-width: 0 0 0px !important;
-  background-color: #1f78b4 !important;
+  background-color: inherit !important;
   color: white;
 }
 
@@ -85,14 +98,14 @@ h6 {
   color: white;
 }
 
-.green-color {
-  color: #158a99;
-  border-color: #158a99;
+.service-text {
+  color: #005EB8;
+  text-decoration: none;
 }
 
-.service-text {
-  color: rgb(31, 120, 180);
-  text-decoration: none;
+a:hover{
+  color: #333F48 !important;
+  text-decoration: none !important;
 }
 
 .social-tag {
@@ -124,7 +137,7 @@ h6 {
 .round {
   width: 100%;
   border-radius: 0px;
-  border: 1.5px #158a99 solid;
+  border: 1.5px #333F48 solid;
   padding: 5px 30px 5px 5px;
   position: absolute;
   top: 0;
@@ -148,6 +161,11 @@ h6 {
 .service-details {
   font-size: 14px;
   flex-flow: column;
+  color: #333F48 !important;
+}
+
+.borderStyle{
+  border: 1px #0C2340 solid;
 }
 
 .search {
