Update Globalscape Fav (#51)
* Update index.html

* Update style.css

* Update App.js

* Update Dashboard.js

* Update Dive.js

* Update DivePower.js

* Update EnterpriseConnect.js

* Update ThreadConnect.js

* Update CenterHeader.js

* Update Sidebar.js

* Add files via upload

* Update NewEngagementRequest.js

* Update Dashboard.js

* Update style.css

* Update Sidebar.js

* Updated logos and aligned

* Update style.css

* New Dive fav

* New EC Fav

* New TC Fav

* Globalscape fav

* Added Axios for API call

* Added Post submit successful msg css

* Engagement form changes

* Fix build

* Define Header

* Fix Build

* added email

* New Logo

* Update Dashboard.js

* Update Dive.js

* Update DivePower.js

* Update EnterpriseConnect.js

* Update ThreadConnect.js

* Update custom.js

* Update index.html

* Update style.css

* Update index.html

* Update App.js

* Update Dashboard.js

* TC Logo

* Update ThreadConnect.js

* Update CenterHeader.js

* Update Sidebar.js

* Carousal Component

* Bug Fix

* Update App.js

* Update Dashboard.js

* Update ThreadConnect.js

* Update Carousal.js

* Update CenterHeader.js

* Update Sidebar.js

* Update App.js

* Update Dashboard.js

* Update Dashboard.js

* Update ThreadConnect.js

* Update Carousal.js

* Added React Bootstrap and Polyfill

* new carousel changes

* Update App.js

* Carousal Changes

* Carousel Changes

* Update ThreadConnect.js

* Embedded Smartsheet

* Update package.json

* Carousel Comp

* User Management

* CustomCarousel

* CustomCarousel

* Update custom.js

--- a/webui-assets/styling/style.css
+++ b/webui-assets/styling/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  outline: none !important;
 }
 
 @font-face {
@@ -405,23 +406,6 @@ a:hover {
     }
 } */
 
-/* external css: flickity.css */
-
-.carousel-cell {
-  width: 28%;
-  height: 145px;
-  margin-right: 10px;
-  border-radius: 5px;
-}
-
-.flickity-page-dots {
-  bottom: -10px !important;
-}
-
-.flickity-viewport {
-  min-height: 158px;
-}
-
 .choices {
   border-radius: 0.25rem !important;
 }
@@ -436,4 +420,49 @@ a:hover {
   border-color: inherit !important;
   outline: 0;
   box-shadow: inherit !important;
+}
+
+.dropdown-menu {
+  font-size: 12px !important;
+}
+
+.carousel {
+  display: flex;
+  flex-flow: wrap-reverse;
+}
+
+.carousel,
+.carousel-inner,
+.carousel-item,
+.col-sm-4 {
+  position: unset !important;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  display: none !important;
+}
+
+.carousel-indicators {
+  position: relative !important;
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+  text-align: center;
+  line-height: 1;
+  margin-top: 0.5rem;
+}
+
+.carousel-indicators button {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin: 0 8px;
+  background: #333;
+  border-radius: 50%;
+  opacity: 0.25;
+  cursor: pointer;
+}
+
+.carousel-indicators button .active {
+  opacity: 1;
 }
