--- a/webui-assets/styling/style.css
+++ b/webui-assets/styling/style.css
@@ -307,7 +307,7 @@ a:hover {
 }
 
 .borderStyle {
-  border: 1.5px #dbe2e9 solid;
+  border: 1.5px #dbe2e9 solid !important;
   border-radius: 0.3rem;
 }
 
@@ -424,12 +424,26 @@ a:hover {
 
 .dropdown-menu {
   font-size: 12px !important;
+  border: 1.5px #dbe2e9 solid !important;
+  border-radius: 0.3rem !important;
+}
+.dropdown-item.active,
+.dropdown-item:active {
+  background-color: #005eb8 !important;
+}
+
+.dropdown-item:focus,
+.dropdown-item:hover {
+  background-color: #dbe2e9 !important;
 }
 
 .carousel {
   display: flex;
   flex-flow: wrap-reverse;
 }
+/* .carousel-inner{
+  padding: 0 1rem ;
+} */
 
 .carousel,
 .carousel-inner,
@@ -454,8 +468,8 @@ a:hover {
 
 .carousel-indicators button {
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   margin: 0 8px;
   background: #333;
   border-radius: 50%;
@@ -465,4 +479,29 @@ a:hover {
 
 .carousel-indicators button .active {
   opacity: 1;
+}
+
+.carousel-buttons button {
+  height: 1.7rem;
+  white-space: nowrap;
+  font-size: 0.8vw;
+  padding: 0 2px;
+  margin: 1px 1.666px !important;
+  background: #dbe2e9;
+  color: #333f48;
+  max-width: 3.5rem;
+}
+
+.tc-dashboard button {
+  height: 1.7rem;
+  white-space: nowrap;
+  font-size: 1vw;
+  padding: 0 2px;
+  margin: 1px 1.666px !important;
+  background: #dbe2e9;
+  color: #333f48;
+}
+
+.carousel-buttons .dropdown-toggle:hover {
+  color: white !important;
 }
