--- a/webui-assets/styling/style.css
+++ b/webui-assets/styling/style.css
@@ -606,7 +606,7 @@ a:hover {
 
 .Card:hover {
   transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 10px 5px 5px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
   /* background-color: #1f78b4; */
   /* color: white; */
 }
@@ -739,8 +739,8 @@ select {
 /* arrows */
 
 select.classic {
-  background-image: linear-gradient(45deg, transparent 50%, blue 50%),
-    linear-gradient(135deg, blue 50%, transparent 50%),
+  background-image: linear-gradient(45deg, transparent 40%, blue 50%),
+    linear-gradient(135deg, blue 50%, transparent 40%),
     linear-gradient(to right, skyblue, skyblue);
   background-position: calc(100% - 20px) calc(1em + 2px),
     calc(100% - 15px) calc(1em + 2px), 100% 0;
@@ -749,8 +749,8 @@ select.classic {
 }
 
 select.classic:focus {
-  background-image: linear-gradient(45deg, white 50%, transparent 50%),
-    linear-gradient(135deg, transparent 50%, white 50%),
+  background-image: linear-gradient(45deg, white 50%, transparent 40%),
+    linear-gradient(135deg, transparent 40%, white 50%),
     linear-gradient(to right, gray, gray);
   background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, 100% 0;
   background-size: 5px 5px, 5px 5px, 2.5em 2.5em;
